--- a/styles/home.css
+++ b/styles/home.css
@@ -37,41 +37,21 @@
 
 
 /* ----- QUOTE ----- */
-.about h2 {
-    display: block;
-}
-
-blockquote {
-    display: flex;
-    justify-content: space-between;
-}
-
-.div-quote {
-    font-size: 2rem;
-    padding-right: 1rem;
-}
-
 .about {
     font-size: 1.2rem;
-    word-spacing: 1px;
-	margin: auto;
     padding: 2rem 0 2rem 0;
     background-color: #252525;
 }
 
 
-/* ----- CONTACT ----- */
+/* ----- CONTACT FORM ----- */
 .contact {
     width: 20rem;
-    /* margin: 0 3rem 5rem; */
     margin: 0 auto;
-    /* box-shadow: 0 0 20px red,
-                0 0 3px white,
-                inset 0 0 10px red; */
 }
 
 fieldset {
-	margin: 5rem auto;
+	margin-top: 3rem;
 	border: none;
 	display: flex;
 	flex-direction: column;
@@ -79,9 +59,12 @@ fieldset {
 }
 
 legend {
-	margin: 0 auto;
-    padding-top: 2rem;
-	font-size: 1.5rem;
+    text-align: center;
+    text-shadow: 2px 2px 3px red;
+    font-weight: 700;
+    font-style: italic;
+    text-transform: uppercase;
+    font-size: 2rem;
 }
 
 label {
@@ -94,7 +77,7 @@ input,
 select,
 textarea {
     background-color: #252525;
-    color: #eee;
+    color: #ddd;
 }
 
 input[type="submit"] {
@@ -102,7 +85,7 @@ input[type="submit"] {
 	font-weight: 700;
     padding: .5rem;
     background-color: maroon;
-    color: #fff;
+    color: #ddd;
     font-size: 1.5rem;
     letter-spacing: 1px;
 }
@@ -110,15 +93,19 @@ input[type="submit"] {
 
 @media (min-width: 68em) {
 
+    .landing-hero video {
+        height: 90vh;
+    }
+
     .landing-hero h1 {
         top: 35%;
-        font-size: 9rem;
+        font-size: 8rem;
     }
 
     .landing-hero h1::after {
         font-size: 6rem;
         position: relative;
-        top: 4rem;
+        top: 2.5rem;
     }
 
     .landing-hero a {
@@ -126,7 +113,7 @@ input[type="submit"] {
     }
 
     .landing-hero a:hover {
-        opacity: 60%;
+        opacity: 70%;
         transition: .7s;
     }
 
@@ -147,8 +134,6 @@ input[type="submit"] {
     .contact {
         margin: 0;
         grid-column: 2 / 3;
-        justify-self: center;
-        /* height: 30rem; */
         box-shadow: none;
         width: 25rem;
     }
